# poly

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  api-response.json  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  tsconfig.base.json  tsconfig.json  turbo.json
.agents/skills/adapt/: SKILL.md
.agents/skills/audit/: SKILL.md
.agents/skills/bolder/: SKILL.md
.agents/skills/colorize/: SKILL.md
.agents/skills/critique/: SKILL.md
.agents/skills/delight/: SKILL.md
.agents/skills/distill/: SKILL.md
.agents/skills/grimoire/: SKILL.md
.agents/skills/grimoire-aave/: SKILL.md
.agents/skills/grimoire-across/: SKILL.md
.agents/skills/grimoire-hyperliquid/: SKILL.md
.agents/skills/grimoire-morpho-blue/: SKILL.md
.claude/skills/: grimoire-across
.github/workflows/: ci.yml
apps/trader/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
research/: README.md  model_weights.example.json  signal_contract.py
src/: logger.ts
src/execution/: executionAdapter.ts  paperExecutor.ts
src/gateways/: polymarketClobGateway.ts  replayPolymarketGateway.ts
src/runtime/: tradingBot.ts
src/strategy/: fairValue.ts
src/utils/: number.ts
tests/: config.test.ts  fairValue.test.ts  helpers.ts
tools/: check-shared-toolchain.mjs
tools/research/: AUTORESEARCH.md  README.md  build_dataset.py  generate_nn_signal.py  generate_signal.py  neural_mlp.py  replay_session.py  research_features.py  train_signal_model.py
(+34 files in other folders)
