[project]
name = "poly-research"
version = "0.1.0"
description = "Python research utilities for the Poly trading bot"
requires-python = ">=3.11"
dependencies = ["numpy>=2.2,<3"]

[project.optional-dependencies]
train = ["torch>=2.5,<3"]

[dependency-groups]
dev = ["ruff>=0.15,<0.16"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
extend-exclude = ["__pycache__"]

[tool.ruff.lint.per-file-ignores]
"tools/research/tests/*" = ["E402"]
